config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agh-demo
  name: agh-demo
  namespace: default
spec:
  selector:
    matchLabels:
      app: agh-demo
  template:
    metadata:
      labels:
        app: agh-demo
    spec:
      containers:
      - image: gcr.io/agh-techtalk/agh-demo:v0.0.2
        name: agh-demo
        ports:
        - containerPort: 8013
        resources:
          requests:
            cpu: 200m
