config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: agh-demo-ingress
spec:
  backend:
    serviceName: agh-demo
    servicePort: 8013
